ftp: Parse PWD reply according to RFC

https://bugzilla.gnome.org/show_bug.cgi?id=614401